BIS-2022: adjust launch-scripts, command-line start and stop actions, GRPC socket communication for the different supported operating systems (Linux, Windows, Mac-OS)